# mqtt-automate

./: Dynamic.hs  README.md  dynamic-reload.cabal  package.yaml
app/: Main.hs
