cabal-version: >=1.10
name:           dynamic-reload
version:        0.1.0.0
license:        BSD3
build-type:     Simple
synopsis:       Template app demonstrating dynamic code reloading with hint

executable reloader
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , hint
    , fsnotify
    , directory
    , filepath
    , time
  default-language: Haskell2010
